--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Description: 
  * @Date: 2022-03-16 15:11:47
- * @LastEditTime: 2023-11-24 17:46:41
- * @FilePath: \example-demo\imageHandler\transform.html
+ * @LastEditTime: 2023-11-24 17:53:01
+ * @FilePath: \imageHandler\transform.html
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -23,7 +23,7 @@
       src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/FileSaver.js/2014-08-29/FileSaver.min.js"
       type="application/javascript"
     ></script>
-    <link rel="stylesheet" href="/imageHandler/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <style lang="">
     body {
